Working progress--todo phone list

--- a/web/home.html
+++ b/web/home.html
@@ -7,7 +7,7 @@
 <body>
 <h1 style="color: darkblue " >Welcome to our homepage!</h1>
 <a href="create.html">Create contact</a><br/>
-<a href="list.jsp">List all contacts</a>
+<a href="list">List all contacts</a>
 
 </body>
 </html>
