--- a/web/success.html
+++ b/web/success.html
@@ -8,6 +8,6 @@
 
 <p>Where to go?</p>
 <a href="create.html">Create contact</a><br/>
-<a href="list.jsp">List all contacts</a>
+<a href="list">List all contacts</a>
 </body>
 </html>
