--- a/web/list.xhtml
+++ b/web/list.xhtml
@@ -45,7 +45,7 @@
         <h:graphicImage value="#{row.photo}" style="max-height: 25px"/>
     </h:column>
     <h:column>
-        <h:inputHidden value="#{row.id}"/>
+        <h:inputHidden id="contactId" value="#{row.id}"/>
     </h:column>
     <h:column>
         <h:form>
