update(done)+delete(done)+validation(on the way)

--- a/web/index.html
+++ b/web/index.html
@@ -28,6 +28,10 @@
 
 <div id="ContactDiv">
     <table>
+        <tr style="display:none;">
+            <td><label for="id">Id</label></td>
+            <td><input id="id"  val=""/></td>
+        </tr>
         <tr>
             <td><label for="firstName">FirstName</label></td>
             <td><input id="firstName" type="text" value="--first name here--"/></td>
