--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="resources/images/contacts.jpg"/>
     <script type="text/javascript" src="scripts/lib/jquery.js"></script>
     <script type="text/javascript" src="scripts/lib/jquery.dataTables.min.js"></script>
-    <script type="text/javascript" src="scripts/create.js"></script>
+    <script type="text/javascript" src="scripts/contact.js"></script>
     <link rel="stylesheet" type="text/css" href="resources/css/main.css"/>
     <link rel="stylesheet" type="text/css" href="resources/css/lib/jquery.dataTables.min.css"/>
 </head>
@@ -64,6 +64,10 @@
     </table>
     <br>
     <input type="button" id="submit" value="Submit" onclick="createContact()"/>
+</div>
+<div id="errorsDiv">
+<p id="errors"></p>
+<button id="gotThis" onclick="gotThis()">Got this!</button>
 </div>
 </body>
 </html>
