--- a/web/index.html
+++ b/web/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" href="resources/images/contacts.jpg"/>
     <script type="text/javascript" src="scripts/lib/jquery.js"></script>
     <script type="text/javascript" src="scripts/lib/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" src="scripts/tableUtils.js"></script>
+    <script type="text/javascript" src="scripts/ajax.js"></script>
     <script type="text/javascript" src="scripts/contact.js"></script>
     <link rel="stylesheet" type="text/css" href="resources/css/main.css"/>
     <link rel="stylesheet" type="text/css" href="resources/css/lib/jquery.dataTables.min.css"/>
@@ -30,7 +32,7 @@
     <table>
         <tr style="display:none;">
             <td><label for="id">Id</label></td>
-            <td><input id="id"  val=""/></td>
+            <td><input id="id" val=""/></td>
         </tr>
         <tr>
             <td><label for="firstName">FirstName</label></td>
@@ -52,22 +54,18 @@
             <td><label for="phoneNumTable">PhoneNumber</label></td>
             <td>
                 <table id="phoneNumTable">
-                    <tr>
-                        <td><input class="phoneNumber" type="text" name="phoneNumber"/></td>
-                        <td>
-                            <input type="button" onclick="addPhoneNumber()" value="+"/>
-                        </td>
-                    </tr>
+                    <tbody id="phoneNumTableBody">
+                    </tbody>
                 </table>
             </td>
         </tr>
     </table>
     <br>
-    <input type="button" id="submit" value="Submit" onclick="createContact()"/>
+    <input type="button" id="submit" value="Submit" onclick="createOrUpdateContact()"/>
 </div>
 <div id="errorsDiv">
-<p id="errors"></p>
-<button id="gotThis" onclick="gotThis()">Got this!</button>
+    <p id="errors"></p>
+    <button id="gotThis" onclick="gotThis()">Got this!</button>
 </div>
 </body>
 </html>
